# VerA

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
models/: muxedblock.py  vco.py
pythams.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythams/core/: block.py  expr.py  fixedpoint.py  fpexpr.py  fsmblock.py  integer.py  intervals.py  intexpr.py  rtl.py
tests/: test_mux.py  test_vco.py
tests/linker/: muxed_output_fp_int.v  parseableverilogfile.v  parser.out  parsertest.py  parsetab.py  test.v  test_mux.py
vera/core/: expr.py  fixedpoint.py  integer.py  intervals.py  intexpr.py  rtl.py
vera/linker/: amslinker.py
vera/vparser/: codegen.py  parser.py
vera/vparser/template/: instancelist.txt
